Can create and persist users and authorization/authentication should be set up